<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="32dp"
    android:paddingRight="16dp"
    tools:context=".activity.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/profile_image"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/profile_image"
        android:drawablePadding="6dp"
        android:text="@string/rp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_wallet_" />

    <TextView
        android:id="@+id/mymoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/currency"
        android:text="@string/mymoney"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/perhitungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="2dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:drawablePadding="6dp"
                android:text="@string/income"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_income" />

            <TextView
                android:id="@+id/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:text="@string/mymoney"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/income"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="6dp"
                android:text="@string/outcome"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_outcome" />

            <TextView
                android:id="@+id/outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/income"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/mymoney"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:id="@+id/viewcalculate"
                android:layout_width="160dp"
                android:layout_height="2dp"
                android:layout_below="@+id/outcome"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewcalculate"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/money"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_money" />

            <TextView
                android:id="@+id/saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewcalculate"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/mymoney"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cvincomeoutcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/perhitungan"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="2dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp">

        <TextView
            android:id="@+id/tvcashflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/perhitungan"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:paddingStart="12dp"
            android:text="@string/cashflow"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCashflow"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            tools:listitem="@layout/item_reveneustream" />


    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:backgroundTint="@color/bluePrimary"
        android:src="@drawable/ic_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/addtransaksi" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        android:focusable="true"
        android:backgroundTint="@color/bluePrimary"
        android:layout_above="@+id/fabAdd"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/ic_create"
        android:contentDescription="@string/addtransaksi" />


</RelativeLayout>